// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly desktop version 1`] = `
<Modal
  centered={true}
  footer={null}
  onCancel={[MockFunction]}
  open={true}
  title="Login"
  width={400}
>
  <div
    className="flux-login"
  >
    <div
      className="oauth"
    >
      <div
        className="button facebook"
        onClick={[MockFunction]}
      >
        Continue with Facebook
      </div>
      <div
        className="button google"
        onClick={[MockFunction]}
      >
        Continue with Google
      </div>
    </div>
    <Divider>
      or
    </Divider>
    <ForwardRef(InternalForm)
      className="login-inputs"
    >
      <InternalFormItem
        name="email-input"
      >
        <ForwardRef
          onKeyDown={[Function]}
          placeholder="Email"
        />
      </InternalFormItem>
      <InternalFormItem
        name="password-input"
      >
        <Password
          onKeyDown={[Function]}
          placeholder="Password"
        />
      </InternalFormItem>
      <div
        className="options"
      >
        <div
          className="remember-me"
          onClick={[Function]}
        >
          <input
            checked={false}
            onChange={[Function]}
            type="checkbox"
          />
          <div>
            Remember me
          </div>
        </div>
        <div
          className="forget-password"
          onClick={[Function]}
        >
          Forgot Password?
        </div>
      </div>
    </ForwardRef(InternalForm)>
    <Space
      className="footer"
      direction="vertical"
    >
      <Button
        block={true}
        onClick={[Function]}
        type="primary"
      >
        Login
      </Button>
      <Button
        block={true}
        onClick={[Function]}
        type="default"
      >
        Create Your FLUX Account
      </Button>
      <div
        className="skip"
        onClick={[Function]}
      >
        Work Offline
      </div>
    </Space>
  </div>
</Modal>
`;

exports[`should render correctly desktop version 2`] = `
<Modal
  centered={true}
  footer={null}
  onCancel={[MockFunction]}
  open={true}
  title="Login"
  width={400}
>
  <div
    className="flux-login"
  >
    <div
      className="oauth"
    >
      <div
        className="button facebook"
        onClick={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
      >
        Continue with Facebook
      </div>
      <div
        className="button google"
        onClick={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
      >
        Continue with Google
      </div>
    </div>
    <Divider>
      or
    </Divider>
    <ForwardRef(InternalForm)
      className="login-inputs"
    >
      <InternalFormItem
        name="email-input"
      >
        <ForwardRef
          onKeyDown={[Function]}
          placeholder="Email"
        />
      </InternalFormItem>
      <InternalFormItem
        name="password-input"
      >
        <Password
          onKeyDown={[Function]}
          placeholder="Password"
        />
      </InternalFormItem>
      <div
        className="options"
      >
        <div
          className="remember-me"
          onClick={[Function]}
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          <div>
            Remember me
          </div>
        </div>
        <div
          className="forget-password"
          onClick={[Function]}
        >
          Forgot Password?
        </div>
      </div>
    </ForwardRef(InternalForm)>
    <Space
      className="footer"
      direction="vertical"
    >
      <Button
        block={true}
        onClick={[Function]}
        type="primary"
      >
        Login
      </Button>
      <Button
        block={true}
        onClick={[Function]}
        type="default"
      >
        Create Your FLUX Account
      </Button>
      <div
        className="skip"
        onClick={[Function]}
      >
        Work Offline
      </div>
    </Space>
  </div>
</Modal>
`;

exports[`should render correctly web version 1`] = `
<Modal
  centered={true}
  footer={null}
  onCancel={[MockFunction]}
  open={true}
  title="Login"
  width={400}
>
  <div
    className="flux-login"
  >
    <div
      className="oauth"
    >
      <div
        className="button facebook"
        onClick={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
      >
        Continue with Facebook
      </div>
      <div
        className="button google"
        onClick={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
      >
        Continue with Google
      </div>
    </div>
    <Divider>
      or
    </Divider>
    <ForwardRef(InternalForm)
      className="login-inputs"
    >
      <InternalFormItem
        name="email-input"
      >
        <ForwardRef
          onKeyDown={[Function]}
          placeholder="Email"
        />
      </InternalFormItem>
      <InternalFormItem
        name="password-input"
      >
        <Password
          onKeyDown={[Function]}
          placeholder="Password"
        />
      </InternalFormItem>
      <div
        className="options"
      >
        <div
          className="remember-me"
          onClick={[Function]}
        >
          <input
            checked={false}
            onChange={[Function]}
            type="checkbox"
          />
          <div>
            Remember me
          </div>
        </div>
        <div
          className="forget-password"
          onClick={[Function]}
        >
          Forgot Password?
        </div>
      </div>
    </ForwardRef(InternalForm)>
    <Space
      className="footer"
      direction="vertical"
    >
      <Button
        block={true}
        onClick={[Function]}
        type="primary"
      >
        Login
      </Button>
      <Button
        block={true}
        onClick={[Function]}
        type="default"
      >
        Create Your FLUX Account
      </Button>
      <div
        className="skip"
        onClick={[Function]}
      >
        Work Offline
      </div>
    </Space>
  </div>
</Modal>
`;
